adding new doc pages

--- a/greenpepper-doc.html
+++ b/greenpepper-doc.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="/static/js/analytics.js" ></script>
-  <link type="text/css" rel="stylesheet" href="/static/css/banner-styles.css"/>
-  <title>Full developer guide - HTML - GreenPepper Open Documentation Refactoring  - GreenPepper</title>
-  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-  <META HTTP-EQUIV="Expires" CONTENT="-1">
-  <script language="javascript">
-      var contextPath = '/confluence';
-  </script>
+  <title>Full developer guide</title>
   <link rel="stylesheet" href="greenpepper-doc.css" type="text/css" />
 </head>
 <body>
