Fill the blanks and put some archived documentation online again

--- a/downloads.html
+++ b/downloads.html
@@ -1,2 +1,33 @@
+<div class="container">
+	<h1>Links to binaries you will need</h1>
 
-	<div class="container"></div>
+	<div class="downloads-section media">
+		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="body media-body">
+			<h2>The demonstration pack</h2>
+			<div></div>
+		</div>
+	</div>
+	<div class="downloads-section media">
+		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="body media-body">
+			<h2>Wikis Plugins/Addons</h2>
+			<div></div>
+		</div>
+	</div>
+	<div class="downloads-section media">
+		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="body media-body">
+			<h2>Maven Repository</h2>
+			<div></div>
+		</div>
+	</div>
+	<div class="downloads-section media">
+		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="body media-body">
+			<h2>Tools</h2>
+			<div></div>
+		</div>
+	</div>
+
+</div>
