--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 <title>GreenPepper Revival</title>
 
 <!-- Bootstrap core CSS -->
-<link
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-	rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+	>
 <!-- Optional theme -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="support/css/whhg.css">
+<link rel="stylesheet" href="support/css/confluence.css">
 
 <!-- Custom styles for this template -->
 <link href="support/greenpepper-revival.css" rel="stylesheet">
