--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,45 @@
 
-	<div class="container">
-	plopt <gpname>GreenPepper</gpname> pil
-	
+<div class="container">
+	<h1>The Revival Sub Projects</h1>
+	<div class="project-preview media">
+		<div class="project-preview-icon media-left media-middle col-md-2"><i class="icon-book"/></div>
+		<div class="media-body text-left">
+			<h2 class="media-heading">The <gpname>GreenPepper</gpname> Documentation project</h2>
+			<p>What could kill a project is the lack of documentation and information. We experienced it with the disappearance of the full <gpname>GreenPepper</gpname> documentation.
+			<br/>This is the most important project at the moment... And also the most difficult for developers ! We require a lot of Help to make something usable.  
+			</p>
+			<p>
+				<a class="btn btn-primary btn-lg" href="https://github.com/strator-dev/greenpepper-doc" role="button" target="_blank">Join the project on GitHub »</a>
+			</p>
+		</div>
 	</div>
+	<div class="project-preview media">
+		<div class="project-preview-icon media-left media-middle col-md-2"><i class="icon-skitch"/></div>
+		<div class="media-body text-left">
+			<h2 class="media-heading">The <gpname>GreenPepper</gpname> Core project</h2>
+			<p>The <gpname>GreenPepper</gpname> Core project is mean to maintain and to evolve the functionalities of <gpname>GreenPepper</gpname>. <br/>
+			It doesn't have dependencies on any other tools.</p>
+			<p>
+				<a class="btn btn-primary btn-lg" href="https://github.com/strator-dev/greenpepper" role="button" target="_blank">Join the project on GitHub »</a>
+			</p>
+		</div>
+	</div>
+	<div class="project-preview media">
+		<div class="project-preview-icon media-left media-middle col-md-2"><i class="icon-threed"/></div>
+		<div class="media-body text-left">
+			<h2 class="media-heading">The <gpname>GreenPepper</gpname> Open project</h2>
+			<p>It was called GreenPepper Open by the creator of GreenPepper when the product was commercial. This project hosted every thing that was OpenSourced 
+			and that was a contribution of the community.<br/>
+			We kept that name but we now hosts underneath it anything that makes <gpname>GreenPepper</gpname> open to the world :
+			</p>
+			<ul>
+				<li>Languages Extensions </li>
+				<li>Wikis Plugins</li>
+				<li>IDE/Build/Countinuous Integration tools</li>
+			</ul>
+			<p>
+				<a class="btn btn-primary btn-lg" href="https://github.com/strator-dev/greenpepper-open" role="button" target="_blank">Join the project on GitHub »</a>
+			</p>
+		</div>
+	</div>
+</div>
