--- a/documentation.html
+++ b/documentation.html
@@ -16,6 +16,63 @@
 		</div>
 	</nav>
 	<div id="static-content" class="col-md-10">
-		<div ui-view></div>
+		<div ui-view>
+			<div id="usage-overview">
+				<h1>A <gpname>GreenPepper</gpname> Usage Overview</h1>
+				<div class="row">
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>1. Write your specifications</h1>
+							</div>
+						</div>
+					</div>
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>2. Wire it to GreenPepper</h1>
+							</div>
+						</div>
+					</div>
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>3. Test the glue</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>4. Write your application</h1>
+							</div>
+						</div>
+					</div>
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>5. Test the application</h1>
+							</div>
+						</div>
+					</div>
+					<div class="usage-step-preview col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/400x300" alt="">
+							<div class="caption">
+								<h1>6. View the reports</h1>
+								<p></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
