--- a/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
+++ b/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
@@ -46,7 +46,7 @@ th.confluenceTh, table th {
 				<td class='confluenceTd'> I submit the search </td>
 			</tr>
 			<tr>
-				<td class='confluenceTd'> The first result is "Home - GreenPepper - GreenPepper" </td>
+				<td class='confluenceTd'> The first result is "Green Pepper Software" </td>
 			</tr>
 		</table>
 	</body>
