add the first FAQ

--- a/documentation.html
+++ b/documentation.html
@@ -5,6 +5,7 @@
 			<h3>Table of Contents</h3>
 			<ul class="main-menu nav nav-stacked">
 				<li ng-class="activateMenu('10minutes-testing')"><a href="#/documentation/10minutes-testing">A 10 Minutes Testing</a></li>
+				<li ng-class="activateMenu('faq')"><a href="#/documentation/faq">FAQ</a></li>
 				<li class="nav-header">User Center</li>
 				<li ng-class="activateMenu('specification-guide')"><a href="#/documentation/specification-guide">Specifications Guide</a></li>
 				<li ng-class="activateMenu('developers-guide')"><a href="#/documentation/developers-guide">Developers Guide</a></li>
