Correct a Typo on Pyxis name

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 				<p><small>
 					GreenPepper is a collaboration platform to help business experts
 					and developers create executable specificatons in order to build
-					the right software. <br>It was brought to Life by Pysis ,
+					the right software. <br>It was brought to Life by Pyxis ,
 					supported for some years, and opensourced by them. Currently no one
 					is providing anymore support to it while some projects have
 					invested so much in it. <br>We decided to revive GreenPepper
