Add contributor documentation

--- a/documentation.html
+++ b/documentation.html
@@ -1,79 +1,94 @@
-
-<div class="container-fluid">
-	<nav class="col-md-2" id="sidebar-menu">
-		<div class=" affix ">
-			<h3>Table of Contents</h3>
-			<ul class="main-menu nav nav-stacked">
-				<li ng-class="activateMenu('10minutes-testing')"><a href="#/documentation/10minutes-testing">A 10 Minutes Testing</a></li>
-				<li ng-class="activateMenu('faq')"><a href="#/documentation/faq">FAQ</a></li>
-				<li class="nav-header">User Center</li>
-				<li ng-class="activateMenu('specification-guide')"><a href="#/documentation/specification-guide">Specifications Guide</a></li>
-				<li ng-class="activateMenu('developers-guide')"><a href="#/documentation/developers-guide">Developers Guide</a></li>
-				<li class="nav-header">Tools and Integration</li>
-				<li ng-class="activateMenu('maven-plugin')"><a href="#/documentation/maven-plugin">Maven Plugin</a></li>
-				<li ng-class="activateMenu('remote-agent')"><a href="#/documentation/remote-agent">Remote Agent</a></li>
-				<li ng-class="activateMenu('confluence-plugin')"><a href="#/documentation/confluence-plugin">Confluence Plugin</a></li>
-			</ul>
-		</div>
-	</nav>
-	<div id="static-content" class="col-md-10">
-		<div ui-view>
-			<div id="usage-overview">
-				<h1>A <gpname>GreenPepper</gpname> Usage Overview</h1>
-				<div class="row">
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>1. Write your specifications</h1>
-							</div>
-						</div>
-					</div>
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>2. Wire it to GreenPepper</h1>
-							</div>
-						</div>
-					</div>
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>3. Test the glue</h1>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>4. Write your application</h1>
-							</div>
-						</div>
-					</div>
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>5. Test the application</h1>
-							</div>
-						</div>
-					</div>
-					<div class="usage-step-preview col-md-4">
-						<div class="thumbnail">
-							<img src="http://placehold.it/400x300" alt="">
-							<div class="caption">
-								<h1>6. View the reports</h1>
-								<p></p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+<html>
+  <head>
+    <meta content="text/html; charset=windows-1252" http-equiv="content-type">
+  </head>
+  <body>
+    <div class="container-fluid">
+      <nav class="col-md-2" id="sidebar-menu">
+        <div class=" affix ">
+          <h3>Table of Contents</h3>
+          <ul class="main-menu nav nav-stacked">
+            <li ng-class="activateMenu('10minutes-testing')"><a href="#/documentation/10minutes-testing">A
+                10 Minutes Testing</a></li>
+            <li ng-class="activateMenu('faq')"><a href="#/documentation/faq">FAQ</a></li>
+            <li class="nav-header">User Center</li>
+            <li ng-class="activateMenu('specification-guide')"><a href="#/documentation/specification-guide">Specifications
+                Guide</a></li>
+            <li ng-class="activateMenu('developers-guide')"><a href="#/documentation/developers-guide">Developers
+                Guide</a></li>
+            <li class="nav-header">Contributor Center</li>
+            <li ng-class="activateMenu('contributor-to-doc')"><a href="#/documentation/contributor-to-doc">Contribute to Documentation</a></li>
+            <li ng-class="activateMenu('contributor-to-code')"><a href="#/documentation/contributor-to-code">Contribute to GreenPepper Code</a></li>
+            <li class="nav-header">Tools and Integration</li>
+            <li ng-class="activateMenu('maven-plugin')"><a href="#/documentation/maven-plugin">Maven
+                Plugin</a></li>
+            <li ng-class="activateMenu('remote-agent')"><a href="#/documentation/remote-agent">Remote
+                Agent</a></li>
+            <li ng-class="activateMenu('confluence-plugin')"><a href="#/documentation/confluence-plugin">Confluence
+                Plugin</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div id="static-content" class="col-md-10">
+        <div ui-view="">
+          <div id="usage-overview">
+            <h1>A <gpname>GreenPepper</gpname> Usage Overview</h1>
+            <div class="row">
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>1. Write your specifications</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>2. Wire it to GreenPepper</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>3. Test the glue</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>4. Write your application</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>5. Test the application</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="usage-step-preview col-md-4">
+                <div class="thumbnail"> <img src="http://placehold.it/400x300"
+                    alt="">
+                  <div class="caption">
+                    <h1>6. View the reports</h1>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
