Update the download page documentation

--- a/downloads.html
+++ b/downloads.html
@@ -2,31 +2,120 @@
 	<h1>Links to binaries you will need</h1>
 
 	<div class="downloads-section media">
-		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="visual media-left"><i class="ionicons ion-android-playstore"></i></div>
 		<div class="body media-body">
 			<h2>The demonstration pack</h2>
-			<div></div>
+			<div>
+				<download>
+					<name>Command Line Demo Pack</name>
+					<description>
+                        <p>The core of <gpname>GreenPepper</gpname> is a command line tool that parses a Specification page and renders a result
+                        using Fixtures code and the application code.<br>
+                        This package is to let you have a very quick preview of how GreenPepper is working.</p>
+                        <p>
+							<a class="btn btn-default" href="#/documentation/10minutes-testing" role="button">Follow the 10mn testing &raquo;</a>
+						</p>
+                    </description>
+					<dllink><a class="btn btn-primary" href="#" role="button">GP demo 4.0</a></dllink>
+				</download>
+            </div>
 		</div>
 	</div>
 	<div class="downloads-section media">
-		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="visual media-left"><i class="mega-octicon octicon-book"></i></div>
 		<div class="body media-body">
 			<h2>Wikis Plugins/Addons</h2>
-			<div></div>
+			<div>
+				<download>
+					<name>Confluence</name>
+					<description></description>
+					<dllink>
+                        <a class="btn btn-primary" href="#" role="button">Confluence 3 plugin 4.0</a>
+                        <a class="btn btn-primary" href="#" role="button">Confluence 5 plugin 4.0</a>
+                    </dllink>
+				</download>
+            </div>
 		</div>
 	</div>
 	<div class="downloads-section media">
-		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="visual media-left"><i class="mega-octicon octicon-repo"></i></div>
 		<div class="body media-body">
 			<h2>Maven Repository</h2>
-			<div></div>
+			<div>
+				<download>
+					<name>Maven Configuration</name>
+					<description>
+                        Use the following configuration in your <b>settings.xml</b> to add OSS repositories. 
+                        Currently, our maven packages are hosted there.
+                        <pre><xmp><repositories>
+    <repository>
+        <id>ossrh</id>
+        <name>Sonatype Public Repository</name>
+        <url>https://oss.sonatype.org/content/groups/public/</url>
+    </repository>
+</repositories>
+<pluginRepositories>
+    <pluginRepository>
+        <id>ossrh</id>
+        <name>Sonatype Public Repository</name>
+        <url>https://oss.sonatype.org/content/groups/public/</url>
+    </pluginRepository>
+</pluginRepositories></xmp></pre>
+                    
+                    </description>
+				</download>
+            </div>
 		</div>
 	</div>
 	<div class="downloads-section media">
-		<div class="visual media-left"><img src="http://placehold.it/200x200" alt=""></div>
+		<div class="visual media-left"><i class="mega-octicon octicon-tools"></i></div>
 		<div class="body media-body">
 			<h2>Tools</h2>
-			<div></div>
+			<div>
+				<download>
+					<name>Remote Runner</name>
+					<description>
+                        <p>The <gpname>GreenPepper</gpname>	remote agent is a small server that can be used to 
+                            execute specifications from a GreenPepper Server to another machine.</p>
+                        <p>
+							<a class="btn btn-default" href="#/documentation/remote-agent" role="button">More information &raquo;</a>
+						</p>
+                    
+                    </description>
+					<dllink><a class="btn btn-primary" href="#" role="button">Remote Runner 4.0</a></dllink>
+				</download>
+				<download>
+					<name>Maven Runner</name>
+					<description></description>
+					<dllink><a class="btn btn-primary" href="#" role="button">Maven Runner 4.0</a></dllink>
+				</download>
+				<download>
+					<name>Java Runner</name>
+					<description></description>
+					<dllink><a class="btn btn-primary" href="#" role="button">Java Runner 4.0</a></dllink>
+				</download>
+				<download>
+					<name>C# Runner</name>
+					<description><p>We couldn't find the source code of the C# runner. Luckily, we have the runner binaries from 
+                        years ago. So we will host the binaries and provide you with a link.
+                        </p>
+                        <p>
+							<a class="btn btn-default" href="#/documentation/dotnet-runner" role="button">See the how to &raquo;</a>
+						</p>
+                    </description>
+					<dllink><a class="btn btn-primary" href="#" role="button">C# Runner</a></dllink>
+				</download>
+				<download>
+					<name>PHP Runner</name>
+					<description></description>
+					<dllink><a class="btn btn-primary" href="#" role="button">PHP Runner 4.0</a></dllink>
+				</download>
+				<download>
+					<name>Eclipse Plugin</name>
+					<description></description>
+					<dllink><a class="btn btn-primary" href="#" role="button">Eclipse Plugin</a></dllink>
+				</download>
+            </div>
 		</div>
 	</div>
 
