--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 	>
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
 <link rel="stylesheet" href="support/css/whhg.css">
 <link rel="stylesheet" href="support/css/confluence.css">
+<link rel="stylesheet" href="support/css/octicons.css">
+<link rel="stylesheet" href="support/css/ionicons.css">
 
 <!-- Custom styles for this template -->
 <link href="support/greenpepper-revival.css" rel="stylesheet">
@@ -75,5 +78,6 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script src="support/greenpepper-revival.js"></script>
 	<script src="components/documentation/documentation.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
 </body>
 </html>
