remove fixed position in the documentation

--- a/documentation.html
+++ b/documentation.html
@@ -5,7 +5,7 @@
   <body>
     <div class="container-fluid">
       <nav class="col-md-2" id="sidebar-menu">
-        <div class=" affix ">
+        <div>
           <h3>Table of Contents</h3>
           <ul class="main-menu nav nav-stacked">
             <li ng-class="activateMenu('10minutes-testing')"><a href="#/documentation/10minutes-testing">A
