Update download links to releases

--- a/downloads.html
+++ b/downloads.html
@@ -16,7 +16,7 @@
 							<a class="btn btn-default" href="#/documentation/10minutes-testing" role="button">Follow the 10mn testing &raquo;</a>
 						</p>
                     </description>
-					<dllink><a class="btn btn-primary" href="#" role="button">GP demo 4.0</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/demonstration-pack-4.0-beta2.tar.gz" role="button">GP demo 4.0</a></dllink>
 				</download>
             </div>
 		</div>
@@ -30,8 +30,8 @@
 					<name>Confluence</name>
 					<description></description>
 					<dllink>
-                        <a class="btn btn-primary" href="#" role="button">Confluence 3 plugin 4.0</a>
-                        <a class="btn btn-primary" href="#" role="button">Confluence 5 plugin 4.0</a>
+                        <a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-confluence3-plugin-2.11-beta1-complete.jar" role="button">Confluence 3 plugin 4.0</a>
+                        <a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-confluence5-plugin-4.0-beta2-complete.jar" role="button">Confluence 5 plugin 4.0</a>
                     </dllink>
 				</download>
             </div>
@@ -46,7 +46,8 @@
 					<name>Maven Configuration</name>
 					<description>
                         Use the following configuration in your <b>settings.xml</b> to add OSS repositories. 
-                        Currently, our maven packages are hosted there.
+                        Currently, our maven packages are hosted there. If you want the snapshots, you will need to use this configuration.
+                        The releases are on the reference repositories.
                         <pre><xmp><repositories>
     <repository>
         <id>ossrh</id>
@@ -82,17 +83,17 @@
 						</p>
                     
                     </description>
-					<dllink><a class="btn btn-primary" href="#" role="button">Remote Runner 4.0</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-remote-agent-4.0-beta2-complete.jar" role="button">Remote Agent 4.0</a></dllink>
 				</download>
 				<download>
 					<name>Maven Runner</name>
 					<description></description>
-					<dllink><a class="btn btn-primary" href="#" role="button">Maven Runner 4.0</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-maven-runner-4.0-beta2-complete.jar" role="button">Maven Runner 4.0</a></dllink>
 				</download>
 				<download>
 					<name>Java Runner</name>
 					<description></description>
-					<dllink><a class="btn btn-primary" href="#" role="button">Java Runner 4.0</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-client-4.0-beta2-complete.jar" role="button">Java Runner 4.0</a></dllink>
 				</download>
 				<download>
 					<name>C# Runner</name>
@@ -103,12 +104,12 @@
 							<a class="btn btn-default" href="#/documentation/dotnet-runner" role="button">See the how to &raquo;</a>
 						</p>
                     </description>
-					<dllink><a class="btn btn-primary" href="#" role="button">C# Runner</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/GreenPepper.Net-Runner.zip" role="button">C# Runner</a></dllink>
 				</download>
 				<download>
 					<name>PHP Runner</name>
 					<description></description>
-					<dllink><a class="btn btn-primary" href="#" role="button">PHP Runner 4.0</a></dllink>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-extensions-php-4.0-beta2-jar-with-dependencies.jar" role="button">PHP Runner 4.0</a></dllink>
 				</download>
 				<download>
 					<name>Eclipse Plugin</name>
