add link for greenpepper eclipse plugin

--- a/downloads.html
+++ b/downloads.html
@@ -108,13 +108,20 @@
 				</download>
 				<download>
 					<name>PHP Runner</name>
-					<description></description>
+					<description>
+                        Use this binary to run GreenPepper Specifications tests with PHP.
+                        <p>
+							<a class="btn btn-default" href="http://blog.octo.com/tests-greenpepper-en-php/" role="button">How to (FR) &raquo;</a>
+						</p>
+                    </description>
 					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/greenpepper-extensions-php-4.0-beta2-jar-with-dependencies.jar" role="button">PHP Runner 4.0</a></dllink>
 				</download>
 				<download>
 					<name>Eclipse Plugin</name>
-					<description></description>
-					<dllink><a class="btn btn-primary" href="#" role="button">Eclipse Plugin</a></dllink>
+					<description><p>We couldn't find the source code of the Eclipse. Luckily, we have the plugins binaries from 
+                        years ago. So we will host the binaries and provide you with a link. The embedded GreenPepper version is 2.8
+                        </p></description>
+					<dllink><a class="btn btn-primary" href="https://github.com/strator-dev/greenpepper/releases/download/greenpepper-base-4.0-beta2/GreenPepper-eclipse-dropins-2.8.0.3.zip" role="button">Eclipse Plugin Dropins pack</a></dllink>
 				</download>
             </div>
 		</div>
