--- a/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
+++ b/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
@@ -40,13 +40,13 @@ th.confluenceTh, table th {
 				<td class='confluenceTd'> The title is "Google" </td>
 			</tr>
 			<tr>
-				<td class='confluenceTd'> I type "github" in the search box </td>
+				<td class='confluenceTd'> I type "strator-dev greenpepper-open on github" in the search box </td>
 			</tr>
 			<tr>
 				<td class='confluenceTd'> I submit the search </td>
 			</tr>
 			<tr>
-				<td class='confluenceTd'> The first result is "GitHub · Where software is built" </td>
+				<td class='confluenceTd'> The first result is "GitHub - strator-dev/greenpepper-open" </td>
 			</tr>
 		</table>
 	</body>
