Fix the build following a change on google

--- a/greenpepper-open/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
+++ b/greenpepper-open/extensions-external/selenium2/src/fixture/specifications/GoogleSearch.html
@@ -40,13 +40,13 @@ th.confluenceTh, table th {
 				<td class='confluenceTd'> The title is "Google" </td>
 			</tr>
 			<tr>
-				<td class='confluenceTd'> I type "strator-dev greenpepper-open on github" in the search box </td>
+				<td class='confluenceTd'> I type "strator-dev greenpepper on github" in the search box </td>
 			</tr>
 			<tr>
 				<td class='confluenceTd'> I submit the search </td>
 			</tr>
 			<tr>
-				<td class='confluenceTd'> The first result is "GitHub - strator-dev/greenpepper-open" </td>
+				<td class='confluenceTd'> The first result is "GitHub - strator-dev/greenpepper: Nouvelle mouture du projet ..." </td>
 			</tr>
 		</table>
 	</body>
