Don't reformat the code and don't create default constructor for fixture.

--- a/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/right1.html
+++ b/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/right1.html
@@ -13,6 +13,8 @@
     <tr>
         <td>do with</td>
         <td colspan="2">Echo</td>
+        <td>from</td>
+        <td>Strator</td>
     </tr>
     <tr>
         <td>accept</td>
