refactor SpyFixture and SubSpyFixture #11

--- a/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/dowith-setup.html
+++ b/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/dowith-setup.html
@@ -12,8 +12,15 @@
 
     <table border="1" cellspacing="0">
         <tr>
+            <td>do with</td>
+            <td>With enterRow method</td>
+        </tr>
+    </table>
+
+    <table border="1" cellspacing="0">
+        <tr>
             <td>setup</td>
-            <td>PhoneBook setup</td>
+            <td>phone book entries</td>
         </tr>
         <tr>
             <td>first name</td>
