--- a/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/list.html
+++ b/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/list.html
@@ -10,10 +10,11 @@
         </tr>
     </table>
 
+
     <table border="1" cellspacing="0">
         <tr>
-            <td>setup</td>
-            <td>PhoneBook setup</td>
+            <td>list of</td>
+            <td>PhoneBook list</td>
         </tr>
         <tr>
             <td>first name</td>
