Generate and detect correctly Setup and Collection Fixture #11

--- a/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/setup.html
+++ b/greenpepper-maven-plugin/src/test/resources/com/greenpepper/maven/plugin/specs/setup.html
@@ -34,4 +34,49 @@
     </table>
 
 
+    <table border="1" cellspacing="0">
+        <tr>
+            <td>setup</td>
+            <td>PhoneBook setup with method</td>
+        </tr>
+        <tr>
+            <td>first name</td>
+            <td>last name</td>
+        </tr>
+        <tr>
+            <td>Paul</td>
+            <td>Tobin</td>
+        </tr>
+        <tr>
+            <td>Steve</td>
+            <td>Job</td>
+        </tr>
+        <tr>
+            <td>Henry</td>
+            <td>Cinq</td>
+        </tr>
+    </table>
+
+    <table border="1" cellspacing="0">
+        <tr>
+            <td>setup</td>
+            <td>PhoneBook setup with annotation</td>
+        </tr>
+        <tr>
+            <td>first name</td>
+            <td>last name</td>
+        </tr>
+        <tr>
+            <td>Paul</td>
+            <td>Tobin</td>
+        </tr>
+        <tr>
+            <td>Steve</td>
+            <td>Job</td>
+        </tr>
+        <tr>
+            <td>Henry</td>
+            <td>Cinq</td>
+        </tr>
+    </table>
 </div>
